spikes/ingress_controllers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller-deployment
  namespace: ingress-controller-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ingress-controller-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: ingress-controller-test
    spec:
      containers:
      - image: quay.io/dkirwan_redhat/crypto_monitoring:v0.0.1
        imagePullPolicy: IfNotPresent
        name: ingress-controller-test
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
