spikes/ingress_controllers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: ingress-controller-test
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ingress-controller-test
  sessionAffinity: None
  type: ClusterIP
