spikes/ingress_controllers/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    type: sharded
  name: test
  namespace: ingress-controller-test
spec:
  host: ingress-controller-test.apps.ci.centos.org
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: test-service
    weight: 100
  wildcardPolicy: None
